--- a/dotnet-ci.yml
+++ b/dotnet-ci.yml
@@ -16,13 +16,13 @@ jobs:
         dotnet-version: 7.0.100
 
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore InvoiceDiscount.sln
 
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build InvoiceDiscount.sln --no-restore
 
     - name: Run Tests
-      run: dotnet test --no-build --verbosity normal --logger "trx;LogFileName=test_results.xml"
+      run: dotnet test InvoiceDiscount.sln --no-build --verbosity normal --logger "trx;LogFileName=test_results.xml"
 
     - name: Publish Test Results
       if: always()
