--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,13 +24,13 @@ jobs:
         dotnet-version: '7.x'
 
     - name: Restore dependencies
-      run: dotnet restore InvoiceDiscount/InvoiceDiscount.sln
+      run: dotnet restore InvoiceDiscount.sln
 
     - name: Build solution
-      run: dotnet build InvoiceDiscount/InvoiceDiscount.sln --no-restore -c Release
+      run: dotnet build InvoiceDiscount.sln --no-restore -c Release
 
     - name: Run tests
-      run: dotnet test InvoiceDiscount/InvoiceDiscount.Test/InvoiceDiscount.Test.csproj --no-build -c Release --logger "trx;LogFileName=test_results.xml"
+      run: dotnet test InvoiceDiscount.Test.csproj --no-build -c Release --logger "trx;LogFileName=test_results.xml"
 
     - name: Publish Unit Test Results
       uses: EnricoMi/publish-unit-test-result-action@v1
