--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -37,4 +37,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: test_results
-        path: InvoiceDiscount/InvoiceDiscount.Test/test_results.xml
+        path: InvoiceDiscount.Test/test_results.xml
