--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,11 +30,12 @@ jobs:
       run: dotnet build InvoiceDiscount.sln --no-restore -c Release
 
     - name: Test
-      run: dotnet test InvoiceDiscount.Test/InvoiceDiscount.Test.csproj --no-build -c Release --logger "trx;LogFileName=test_results.xml"
+      working-directory: ./InvoiceDiscount/InvoiceDiscount.Test
+      run: dotnet test InvoiceDiscount.Test.csproj --no-build -c Release --logger "trx;LogFileName=test_results.xml"
       
     - name: Upload test results
       if: always()
       uses: actions/upload-artifact@v2
       with:
-        name: test_results
-        path: InvoiceDiscount.Test/test_results.xml
+         name: test_results
+         path: ./InvoiceDiscount/InvoiceDiscount.Test/test_results.xml
